[package]
name = "md-lv"
version = "0.2.1"
authors = ["Ian Graham"]
edition = "2018"
description = "Overdamped Langevin dyanmics"
license = "MIT"
keywords = ["md", "molecular dynamics"]

[[bin]]
name = "md-lv"
path = "src/main.rs"
test = false
bench = false

[[bin]]
name = "replica"
path = "src/replica.rs"
test = false
bench = false

[[bin]]
name = "compress"
path = "src/compress.rs"
test = false
bench = false

[[bin]]
name = "init_compress_replica"
path = "src/init_compress_replica.rs"
test = false
bench = false

[[bin]]
name = "init_compress_replica_unitbox"
path = "src/init_compress_replica_unitbox.rs"
test = false
bench = false

[[bin]]
name = "init_compress_replica_varboxsigma"
path = "src/init_compress_replica_varboxsigma.rs"
test = false
bench = false

[[bin]]
name = "init_compress"
path = "src/init_compress.rs"
test = false
bench = false

[[bin]]
name = "init_compress_replica_boxy"
path = "src/init_compress_replica_boxy.rs"
test = false
bench = false

[dependencies]
rand = "0.8"
rand_distr = "0.4"
rand_pcg = "0.3"
clap = "2.33"
sprs = "0.9"
itertools-num = "0.1"