[package]
name = "md-lv"
version = "0.2.1"
authors = ["Ian Graham"]
edition = "2018"
description = "Overdamped Langevin dyanmics"
license = "MIT"
keywords = ["md", "molecular dynamics"]

[[bin]]
name = "md-lv"
path = "src/main.rs"
test = false
bench = false

[dependencies]
rand = "0.8"
rand_distr = "0.4"
rand_pcg = "0.3"
clap = "2.33"
itertools-num = "0.1"