[package]
name = "md-lv"
version = "0.4.2"
authors = ["Ian Graham"]
edition = "2018"
description = "Overdamped Langevin dyanmics"
license = "MIT"
keywords = ["md", "molecular dynamics"]

[dependencies]
rand = "0.8"
rand_distr = "0.4"
rand_pcg = "0.3"
clap = "2.33"
itertools-num = "0.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
hdf5 = "0.7"
ndarray = "0.14"
itertools = "0.10.3"